# adk-rfp-agent

./: .gitignore  README.md  main.py  pyproject.toml
auditor_agent/: .env.example  __init__.py  agent.py  model.py  tools.py
auditor_agent/guidelines/: compliance_guidelines.json  writing_guidelines.json
auditor_agent/prompts/: aggregator_agent_prompt.yaml  guidelines_compliance_agent_prompt.yaml  retrieval_agent_prompt.yaml  spelling_grammar_agent_prompt.yaml
auditor_agent/utils/: load_prompt.py  logging_config.py
scripts/: deploy_to_agentspace.py
